# ai-development-monitor

./: .gitignore  CHANGELOG.md  NOTICE  README.md  README_TEST_EXECUTION.md  config.json  debug_logs.py  mcp_client_log.txt  package-lock.json  package.json  requirements.txt  start_mcp_server.sh  start_server.sh  start_web_server.sh
docs/: chat_history.md  cpp23_support.md  github_copilot_chat_integration.md  github_copilot_test_execution.md  huggingface_integration.md  mcp_server.md  tdd_evaluator_integration.md  tdd_flow.md  test_execution.md  version_history.md
examples/: check_mcp_server.py  demo.py  improved_mcp_client.py  mcp_debug.py  mcp_test_client.py  run_test_demo.sh  run_test_execution.py  simple_mcp_test.py
examples/cpp23/: CMakeLists.txt  CMakeLists_simple.txt  build_simple_clang19.sh  build_with_clang19.sh  compile_direct_clang19.sh  cpp23_features.cpp  cpp23_features_standalone.cpp  cpp23_test_example.cpp  direct_compile_with_clang19.sh  execute_cpp23_tests.sh  toolchain_clang19.cmake
examples/cpp23/direct_build/: cpp23_features
src/: adaptive_test_generation.py  api_server.py  enhanced_tdd_templates.py  language_test_templates.py  mcp_server.py  monitor_agent.py  task_analyzer.py  task_relevance.py  tdd_evaluator.py  tdd_helpers.py  test_execution.py  test_quality_metrics.py  test_quality_metrics.py.new  web_interface.py  web_server.py
tests/: test_mcp_compliance.py
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  TDD_DASHBOARD.md  ai-development-monitor-0.1.0.vsix  ai-development-monitor-0.1.1.vsix  ai_monitor_panel.js  (+35 more)
(+4 files in other folders)
